[package]
name = "zsh-sys"
version = "0.2.1"
authors = ["Cole McAnelly <cole.mcanelly3@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/zsh-rs/zsh-sys"
edition = "2024"
description = """
Low-level bindings to dynamically-loadable zsh internals
"""

[lib]
name = "zsh"

[features]
default = ["all"]
all = ["zle", "modules", "builtins"]
zle = ["pastey"]
modules = ["pastey"]
builtins = ["pastey"]

[dependencies]
pastey = { version = "0.2", optional = true }

[build-dependencies]
bindgen = '0.72.1'
glob = "0.3.3"
zsh-src = { git = "https://github.com/zsh-rs/zsh-src.git", version = "0.1" }
